istio-teaching/release/canary/argo/argo-vs-reviews-subset.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews-vs
spec:
  gateways:
  - istio/bookinfo-gateway
  hosts:
  - "*"
  http:
  - name: http-primary
    route:
    - destination:
        host: reviews
        subset: v1
      weight: 100
    - destination:
        host: reviews
        subset: v2
      weight: 0
